[package]
name = "futures-map"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Utilites for storing futures and streams in a pollable map"
repository = "https://github.com/dariusc93/futures-map"
authors = ["Darius Clark"]
exclude = [".gitignore"]


[dependencies]
futures = "0.3.30"
pin-project = "1.1.5"