[package]
name = "pollable-map"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Utilites for storing futures and streams in as a pollable map"
repository = "https://github.com/dariusc93/pollable-map"
authors = ["Darius Clark"]
exclude = [".gitignore"]


[dependencies]
futures = "0.3.30"